--- a/Dockerfile.ext-event
+++ b/Dockerfile.ext-event
@@ -1,3 +1,10 @@
+FROM driftphp/base as extension
+RUN apk add libevent-dev autoconf build-base
+RUN pecl channel-update pecl.php.net
+RUN pecl install event-2.5.3
+
 FROM driftphp/base
 WORKDIR /var/www
-RUN apk --no-cache add php7-event
+RUN apk add libevent
+COPY --from=extension /usr/local/lib/php/extensions/no-debug-non-zts-20190902/event.so /usr/local/lib/php/extensions/no-debug-non-zts-20190902/event.so
+RUN docker-php-ext-enable --ini-name zz-event.ini event
